Removed quotes from configuration-path in reviewer_auto_assigner.yml

--- a/.github/workflows/reviewer_auto_assigner.yml
+++ b/.github/workflows/reviewer_auto_assigner.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: kentaro-m/auto-assign-action@v1.1.2
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          configuration-path: ".github/auto_assigner_config.yml"
+          configuration-path: .github/auto_assigner_config.yml
