--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,6 +1,8 @@
 name: "PR_labeler"
 on:
-- pull_request_target
+  pull_request_target:
+    types: [opened, reopened, edited, closed, synchronize]
+
 
 jobs:
   triage:
@@ -9,3 +11,4 @@ jobs:
     - uses: actions/labeler@main
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        configuration-path: .github/issues_labeler.yml
