--- a/Rust/std-input/Cargo.toml
+++ b/Rust/std-input/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "cp"
+name = "std-input"
 version = "0.1.0"
 authors = ["Abhik Jain <abhikjain360@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
-name = "2d-matrix-sorting"
-path = "./src/2d_matrix_sorting.rs"
-
 [dependencies]
-std-input = { version = "0.1.0", path = "../std-input" }
