--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,6 +6,7 @@ enabled = true
 
   [analyzers.meta]
   runtime_version = "3.x.x"
+  type_checker = "mypy"
 
 [[analyzers]]
 name = "go"
@@ -20,3 +21,10 @@ enabled = true
 
   [analyzers.meta]
   environment = ["nodejs"]
+
+[[analyzers]]
+name = "java"
+enabled = true
+
+  [analyzers.meta]
+  runtime_version = "8"
