--- a/Rust/sort/Cargo.toml
+++ b/Rust/sort/Cargo.toml
@@ -6,4 +6,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "bead-sort"
+path = "./src/bead_sort.rs"
+
+[[bin]]
+name = "bubble-sort"
+path = "./src/bubble_sort.rs"
+
 [dependencies]
+std-input = { version = "0.1.0", path = "../std-input" }
