--- a/.github/workflows/AssignGuide.yml
+++ b/.github/workflows/AssignGuide.yml
@@ -1,7 +1,8 @@
 name: "Assign Guide"
 on:
-  pull_request:
-    types: [opened,synchronize]
+  issues:
+    types: [opened]
+
     
 jobs:
   GreetCommitter:    
@@ -12,5 +13,4 @@ jobs:
       env: 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with: 
-        content: "
-You can assign the Issue for yourself by using the '/assign' command. Make sure The algorithm/ data structure you are trying to add doesn't already exist. read the [Doc](https://docs.google.com/document/d/1WYYc2ymImxS6-TKB6pRX77A9zpXb_ujGjdpfMaTDXwc/edit?usp=sharing) before you proceed."
+        content: "You can assign the Issue for yourself by using the '/assign' command. Make sure The algorithm/ data structure you are trying to add doesn't already exist. read the [Doc](https://docs.google.com/document/d/1WYYc2ymImxS6-TKB6pRX77A9zpXb_ujGjdpfMaTDXwc/edit?usp=sharing) before you proceed."
