--- a/.github/workflows/Issue_watcher.yml
+++ b/.github/workflows/Issue_watcher.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@main
       - name: Run Action
-        uses: anushkrishnav/Issue-Police@main
+        uses: Issue-Watcher@main
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
           author: '${{github.actor}}'
