--- a/.github/workflows/Issue_watcher.yml
+++ b/.github/workflows/Issue_watcher.yml
@@ -16,3 +16,4 @@ jobs:
           token: '${{ secrets.GITHUB_TOKEN }}'
           author: '${{github.actor}}'
           repo: TesseractCoding/NeoAlgo
+          maxIssue: 2
